[package]
name = "bbox-tile-server"
version = "0.6.0-beta1"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]
readme = "README.md"
description = "Vector and raster tiles server supporting various sources and storage formats"
keywords = ["maps", "tiles", "mbtiles", "pmtiles", "postgis"]
categories = ["science::geo"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = ["map-server", "asset-server"]
map-server = ["bbox-map-server"]
asset-server = ["bbox-asset-server"]
# wms-proxy = ["reqwest"]
# s3 = ["rusoto_core", "rusoto_s3"]
projtransform = ["tile-grid/projtransform"]

[dependencies]
actix-web = { workspace = true }
anyhow = "1.0.52"
async-channel = "1.6.1"
async-trait = { workspace = true }
bbox-asset-server = { path = "../bbox-asset-server", version = "0.6.0-beta1", optional = true }
bbox-core = { path = "../bbox-core", version = "0.6.0-beta1" }
bbox-map-server = { path = "../bbox-map-server", version = "0.6.0-beta1", optional = true }
bytes = "1.1.0"
chrono = { workspace = true }
clap = { workspace = true }
crossbeam = "0.8.1"
dyn-clone = "1.0.6"
futures = "0.3"
futures-util = "0.3.21"
geo-types = "0.7.13"
geozero = { workspace = true, features = [ "with-mvt", "with-postgis-sqlx" ] }
indicatif = "0.16.2"
log = { workspace = true }
martin-mbtiles = { package = "mbtiles", version = "0.9.1", default-features = false }
martin-tile-utils = "0.4.1"
num_cpus = { workspace = true }
ogcapi-types = { version = "0.2.0", default-features = false }
once_cell = { workspace = true }
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
pmtiles = { version = "0.3.1", features = ["mmap-async-tokio"] }
pmtiles2 = { version = "0.2.2", default-features = false }
prometheus = { workspace = true }
regex = "1.10.3"
reqwest = { workspace = true }
rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.47.0", default-features = false, features = ["rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tile-grid = "0.6.1"
tilejson = "0.4.1"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "fs", "sync"] }
toml = "0.8.10"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
test-log = "0.2.14"

[[bin]]
name = "bbox-tile-server"
path = "src/main.rs"

[package.metadata.deb]
name = "bbox-tile-server"
license-file = ["../LICENSE-MIT", "4"]
maintainer = "Pirmin Kalberer <pirmin.kalberer@gmail.com>, BBOX contributors"
extended-description = """
BBOX tile server delivers and produces vector and raster tiles from data
sources like PostGIS, QGIS Server, UMN Mapserver and external WMS servers.
Tiles can be stored in a file system, on S3, as MBTiles or PMTiles archives.
BBOX provides OGC Tiles API endpoints and CLI parameters for seeding."""
section = "utility"
priority = "optional"
revision = ""
depends = "$auto"
assets = [
    ["../target/release/bbox-tile-server", "/usr/bin/bbox-tile-server", "755"],
    ["README.md", "/usr/share/doc/bbox-tile-server/README.md", "644"],
]

[package.metadata.deb.variants.bookworm]
revision = "bookworm"
depends = "libc6 (>= 2.34)"

[package.metadata.deb.variants.bullseye]
revision = "bullseye"
depends = "libc6 (>= 2.18)"
