[package]
name = "async-fcgi"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-service = "1"
async-process = "1.0.0"
futures-lite = "1.2.0"
fastcgi-client = { version = "0.5.0", default-features = false }
bufstream = "0.1.4"
log = "0.4"
env_logger = "0.7"
opentelemetry = "0.9.0"
opentelemetry-jaeger = { version = "0.8.0", features = ["collector_client"] }
askama = "0.9"
rand = "0.7.3"
ignore = "0.4"
num_cpus = "1.0"

[build-dependencies]
askama = "0.9"
