[package]
name = "async-fcgi"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-service = "1"
async-process = "1.0.0"
fastcgi-client = { version = "0.5.0", default-features = false }
bufstream = "0.1.4"
log = "0.4"
env_logger = "0.7"
deadpool = "0.5.2"
async-trait = "0.1.40"
tokio = "0.2.22"
opentelemetry = "0.9.0"
opentelemetry-jaeger = { version = "0.8.0", features = ["collector_client"] }
askama = "0.9"
rand = "0.7.3"
ignore = "0.4"
num_cpus = "1.0"
actix-web-prom = "0.5.0"
serde = "1.0.116"
serde_json = "1.0.57"
serde-xml-rs = "0.4.0"
lazy_static = "1.4.0"
awc = "2.0.0"

rust-embed = { version = "5.6.0", features = ["compression"] }
futures-util = "0.3.5"
mime = "0.3.16"
mime_guess = "2.0.3"
fxhash = "0.2.1"

[dev-dependencies]
