[package]
name = "mock-fcgi-wms"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/sourcepole/bbox"
license = "MIT OR Apache-2.0"

[dependencies]
fastcgi = "1.0.0"
opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }
opentelemetry-jaeger = { version = "0.16", features = ["collector_client"] }

[[bin]]
name = "mock-fcgi-wms"
path = "src/main.rs"
