[package]
name = "mock-fcgi-wms"
version = "0.1.0"
authors = ["Pirmin Kalberer <pirmin.kalberer@gmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
fastcgi = "1.0.0"
opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }
opentelemetry-jaeger = { version = "0.16", features = ["collector_client"] }

[[bin]]
name = "mock-fcgi-wms"
path = "src/main.rs"
